--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -240,7 +240,7 @@
                 <button class="close-btn">&times;</button>
             </div>
             <div class="modal-body">
-                <p>정말로 삭제하시겠습니까?</p>
+                <p>정말로 바꾸시겠습니까?</p>
             </div>
             <div class="modal-footer">
                 <button id="confirm-delete" class="btn confirm-btn">확인</button>
@@ -256,8 +256,7 @@
                 <h3 class="modal__title">회원 상세보기</h3>
                 <a class="modal-close">
                     <svg xmlns="http://www.w3.org/2000/svg" data-name="Capa 1" id="Capa_1" viewBox="0 0 20 19.84">
-                        <path
-                                d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
+                        <path d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
                     </svg>
                 </a>
             </div>
@@ -276,6 +275,12 @@
                             <h5>나이</h5>
                             <div class="user__profile__input">
                                 <input type="text" id="age" name="memberAge" value="24" readonly/>
+                            </div>
+                        </div>
+                        <div class="user__profile">
+                            <h5>관심 봉사</h5>
+                            <div class="user__profile__input">
+                                <input type="text" id="interest" name="memberInterest" value="관심 봉사"/>
                             </div>
                         </div>
                         <div class="user__profile">
@@ -303,12 +308,6 @@
                             <h5>주소</h5>
                             <div class="user__profile__input">
                                 <input type="text" id="address" name="memberAddress" value="주소"/>
-                            </div>
-                        </div>
-                        <div class="user__profile">
-                            <h5>관심 봉사</h5>
-                            <div class="user__profile__input">
-                                <input type="text" id="interest" name="memberInterest" value="관심 봉사"/>
                             </div>
                         </div>
                         <div class="user__profile">
