시큐리티 memberJoinType 해결

--- a/src/main/resources/templates/join-login/email-join.html
+++ b/src/main/resources/templates/join-login/email-join.html
@@ -27,8 +27,8 @@
                     <h1 class="join-title">이메일로 가입하기</h1>
 
                     <form th:action="@{/member/join}" method="post" name="joinForm">
-                        <!--<input th:if="${member != null && member.memberJoinType != null}" type="hidden" name="memberJoinType" th:value="${member.memberJoinType}">
-                        <input th:unless="${member != null && member.memberJoinType != null}" type="hidden" name="memberJoinType" th:value="${member.memberJoinType}">-->
+                        <input th:if="${member != null && member.memberJoinType != null}" type="hidden" name="memberJoinType" th:value="${member.memberJoinType}">
+                        <input th:unless="${member != null && member.memberJoinType != null}" type="hidden" name="memberJoinType" th:value="심청이">
                         <!--<input type="hidden" name="memberJoinType" th:if="${kakaoInfo} != null" value="카카오">-->
                         <div class="input-div">
                             <div class="input-title">이름</div>
