--- a/src/main/resources/templates/community/free-detail.html
+++ b/src/main/resources/templates/community/free-detail.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/community/free-detail.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
@@ -145,100 +146,100 @@
                         </ul>
                         <!--  -->
                         <div style="height: 24px;"></div>
-                        <div id="comment-btn">
-                            <button class="comment-btn">
-                                <div class="comment-text">
-                                    댓글 더 보기
-                                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="comment-svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3.27 8.42a1.076 1.076 0 0 1 1.587-.13L12 14.832l7.143-6.544a1.076 1.076 0 0 1 1.586.13 1.26 1.26 0 0 1-.122 1.696L12 18l-8.607-7.885A1.26 1.26 0 0 1 3.27 8.42Z"></path></svg>
-                                </div>
-                            </button>
-                        </div>
+<!--                        <div id="comment-btn">-->
+<!--                            <button class="comment-btn">-->
+<!--                                <div class="comment-text">-->
+<!--                                    댓글 더 보기-->
+<!--                                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="comment-svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3.27 8.42a1.076 1.076 0 0 1 1.587-.13L12 14.832l7.143-6.544a1.076 1.076 0 0 1 1.586.13 1.26 1.26 0 0 1-.122 1.696L12 18l-8.607-7.885A1.26 1.26 0 0 1 3.27 8.42Z"></path></svg>-->
+<!--                                </div>-->
+<!--                            </button>-->
+<!--                        </div>-->
                     </div>
                     <div style="height: 40px;"></div>
                     <div class="border-line"></div>
                     <div style="height: 28px;"></div>
                     <section></section>
-                    <h4 class="another-review">
-                        <div class="another-review-container">
-                            <span class="another-review-text">다른 심청이의 최신 활동 후기</span>
-                        </div>
-                    </h4>
-                    <ul class="new-post-container">
-                        <!--  -->
-                        <li class="new-post">
-                            <div>
-                                <button class="new-post-btn">
-                                    <div class="post-container">
-                                        <div class="post-wrapper">
-                                            <h2 class="post-title">의미없는 정답공개</h2>
-                                            <p class="post-contant">
-                                                쉽다고 생각은 했지만 정답이라니 치욕스럽습니다,,(?)정답은 나무 맞구요??ㅋㅋㅋㅋ 노란색 나무라도 한 그루 그렸으면 좀 헷갈리셨을텐데 말이죠.
-                                            </p>
-                                        </div>
-                                        <div class="post-profile-container">
-                                            <span class="post-profile-span">
-                                                <img class="post-profile-img" src="https://steadio.imgix.net/creator-posts/58b04467-0a9c-4aaf-8986-716a09f9afa9/creatorPostImage/9e11911b-906e-4357-a35e-7fde70f8eb06.JPG?auto=format%2Ccompress&fit=crop&h=420&lossless=true&w=680">
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <div class="post-user-container">
-                                        <div class="post-user-info">
-                                            <span class="post-user-name">
-                                                아랑의 작업실
-                                            </span>
-                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="post-user-svg"><circle cx="12" cy="12" r="4"></circle></svg>
-                                            <span class="post-user-day">2일 전</span>
-                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="post-user-svg"><circle cx="12" cy="12" r="4"></circle></svg>
-                                            <span class="post-user-see">조회수 38</span>
-                                        </div>
-                                    </div>
-                                </button>
-                            </div>
-                        </li>
-                        <!--  -->
-                        <li class="new-post">
-                            <div>
-                                <button class="new-post-btn">
-                                    <div class="post-container">
-                                        <div class="post-wrapper">
-                                            <h2 class="post-title" th:text="${freeBoardDTO.boardTitle}">의미없는 정답공개</h2>
-                                            <p class="post-contant" th:text="${freeBoardDTO.boardContent}">
-                                                쉽다고 생각은 했지만 정답이라니 치욕스럽습니다,,(?)정답은 나무 맞구요??ㅋㅋㅋㅋ 노란색 나무라도 한 그루 그렸으면 좀 헷갈리셨을텐데 말이죠.
-                                            </p>
-                                        </div>
-                                        <div class="post-profile-container">
-                                            <span class="post-profile-span">
-                                                <img class="post-profile-img" src="https://steadio.imgix.net/creator-posts/58b04467-0a9c-4aaf-8986-716a09f9afa9/creatorPostImage/9e11911b-906e-4357-a35e-7fde70f8eb06.JPG?auto=format%2Ccompress&fit=crop&h=420&lossless=true&w=680">
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <div class="post-user-container">
-                                        <div class="post-user-profile"></div>
-                                        <div class="post-user-info">
-                                            <span class="post-user-name">
-                                                아랑의 작업실
-                                            </span>
-                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="post-user-svg"><circle cx="12" cy="12" r="4"></circle></svg>
-                                            <span class="post-user-day">2일 전</span>
-                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="post-user-svg"><circle cx="12" cy="12" r="4"></circle></svg>
-                                            <span class="post-user-see">조회수 38</span>
-                                        </div>
-                                    </div>
-                                </button>
-                            </div>
-                        </li>
-                        <!--  -->
-                    </ul>
+<!--                    <h4 class="another-review">-->
+<!--                        <div class="another-review-container">-->
+<!--                            <span class="another-review-text">다른 심청이의 최신 활동 후기</span>-->
+<!--                        </div>-->
+<!--                    </h4>-->
+<!--                    <ul class="new-post-container">-->
+<!--                        &lt;!&ndash;  &ndash;&gt;-->
+<!--                        <li class="new-post">-->
+<!--                            <div>-->
+<!--                                <button class="new-post-btn">-->
+<!--                                    <div class="post-container">-->
+<!--                                        <div class="post-wrapper">-->
+<!--                                            <h2 class="post-title">의미없는 정답공개</h2>-->
+<!--                                            <p class="post-contant">-->
+<!--                                                쉽다고 생각은 했지만 정답이라니 치욕스럽습니다,,(?)정답은 나무 맞구요??ㅋㅋㅋㅋ 노란색 나무라도 한 그루 그렸으면 좀 헷갈리셨을텐데 말이죠.-->
+<!--                                            </p>-->
+<!--                                        </div>-->
+<!--                                        <div class="post-profile-container">-->
+<!--                                            <span class="post-profile-span">-->
+<!--                                                <img class="post-profile-img" src="https://steadio.imgix.net/creator-posts/58b04467-0a9c-4aaf-8986-716a09f9afa9/creatorPostImage/9e11911b-906e-4357-a35e-7fde70f8eb06.JPG?auto=format%2Ccompress&fit=crop&h=420&lossless=true&w=680">-->
+<!--                                            </span>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    <div class="post-user-container">-->
+<!--                                        <div class="post-user-info">-->
+<!--                                            <span class="post-user-name">-->
+<!--                                                아랑의 작업실-->
+<!--                                            </span>-->
+<!--                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="post-user-svg"><circle cx="12" cy="12" r="4"></circle></svg>-->
+<!--                                            <span class="post-user-day">2일 전</span>-->
+<!--                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="post-user-svg"><circle cx="12" cy="12" r="4"></circle></svg>-->
+<!--                                            <span class="post-user-see">조회수 38</span>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </button>-->
+<!--                            </div>-->
+<!--                        </li>-->
+<!--                        &lt;!&ndash;  &ndash;&gt;-->
+<!--                        <li class="new-post">-->
+<!--                            <div>-->
+<!--                                <button class="new-post-btn">-->
+<!--                                    <div class="post-container">-->
+<!--                                        <div class="post-wrapper">-->
+<!--                                            <h2 class="post-title" th:text="${freeBoardDTO.boardTitle}">의미없는 정답공개</h2>-->
+<!--                                            <p class="post-contant" th:text="${freeBoardDTO.boardContent}">-->
+<!--                                                쉽다고 생각은 했지만 정답이라니 치욕스럽습니다,,(?)정답은 나무 맞구요??ㅋㅋㅋㅋ 노란색 나무라도 한 그루 그렸으면 좀 헷갈리셨을텐데 말이죠.-->
+<!--                                            </p>-->
+<!--                                        </div>-->
+<!--                                        <div class="post-profile-container">-->
+<!--                                            <span class="post-profile-span">-->
+<!--                                                <img class="post-profile-img" src="https://steadio.imgix.net/creator-posts/58b04467-0a9c-4aaf-8986-716a09f9afa9/creatorPostImage/9e11911b-906e-4357-a35e-7fde70f8eb06.JPG?auto=format%2Ccompress&fit=crop&h=420&lossless=true&w=680">-->
+<!--                                            </span>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    <div class="post-user-container">-->
+<!--                                        <div class="post-user-profile"></div>-->
+<!--                                        <div class="post-user-info">-->
+<!--                                            <span class="post-user-name">-->
+<!--                                                아랑의 작업실-->
+<!--                                            </span>-->
+<!--                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="post-user-svg"><circle cx="12" cy="12" r="4"></circle></svg>-->
+<!--                                            <span class="post-user-day">2일 전</span>-->
+<!--                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="post-user-svg"><circle cx="12" cy="12" r="4"></circle></svg>-->
+<!--                                            <span class="post-user-see">조회수 38</span>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </button>-->
+<!--                            </div>-->
+<!--                        </li>-->
+<!--                        &lt;!&ndash;  &ndash;&gt;-->
+<!--                    </ul>-->
 
-                    <!-- 더보기 -->
-                    <div class="more">
-                        <button class="more-btn" type="button">
-                            더보기
-                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="more-svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="m20.023 11.886-7 7a.9.9 0 0 1-1.273-1.273l4.827-4.827H5.15a.9.9 0 0 1 0-1.8h11.427L11.75 6.16a.9.9 0 1 1 1.273-1.273l7 7Z"></path>
-                            </svg>
-                        </button>
-                    </div>
+<!--                    &lt;!&ndash; 더보기 &ndash;&gt;-->
+<!--                    <div class="more">-->
+<!--                        <button class="more-btn" type="button">-->
+<!--                            더보기-->
+<!--                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="more-svg">-->
+<!--                                <path fill-rule="evenodd" clip-rule="evenodd" d="m20.023 11.886-7 7a.9.9 0 0 1-1.273-1.273l4.827-4.827H5.15a.9.9 0 0 1 0-1.8h11.427L11.75 6.16a.9.9 0 1 1 1.273-1.273l7 7Z"></path>-->
+<!--                            </svg>-->
+<!--                        </button>-->
+<!--                    </div>-->
                 </main>
             </div>
             <footer class="footer">
@@ -254,6 +255,7 @@
                 </div>
             </footer>
         </div>
+         <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
     </div>
 
      <!-- -->
@@ -285,6 +287,7 @@
 <script th:inline="javascript">
     let freeBoardDTO = [[${freeBoardDTO}]];
     let boardId = freeBoardDTO.id;
+    console.log(boardId)
     // const fileDTOS = [[${freeBoardDTO.fileDTOS}]];
 
     /* 날짜 변환 (년, 월, 일) */
