마이페이지/ 회원가입 QA테스트 99% 완료

--- a/src/main/resources/templates/mypage/rice-list.html
+++ b/src/main/resources/templates/mypage/rice-list.html
@@ -30,7 +30,7 @@
                         <div class="mypage-info">
                             <div class="info-name">정현진</div>
                             <div class="info-rice">
-                                <p>내 공양미 : 300석</p>
+                                <p th:text="'내 공양미: '+${memberDTO.memberRice} + '석'">내 공양미 : 300석</p>
                             </div>
                         </div>
                     </div>
