--- a/src/main/resources/templates/mypage/volunteer-work-list.html
+++ b/src/main/resources/templates/mypage/volunteer-work-list.html
@@ -98,7 +98,7 @@
         <div class="content-wrap">
             <div class="support-request-wrap">
                 <div class="support-request-inner-wrap">
-                    <div class="support-request-one-wrap">
+                    <!--<div class="support-request-one-wrap">
                         <div class="support-request">
                             <div class="support-request-place">
                                 <div class="support-request-title-wrap">
@@ -133,7 +133,7 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="page-wrap">
                     <div>
