--- a/src/main/resources/templates/error/401.html
+++ b/src/main/resources/templates/error/401.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>401</title>
+    <title>403</title>
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/error/error.css" />
     <link rel="shortcut icon" href="/image/pavicon.png">
@@ -12,8 +12,8 @@
 <body>
     <div class="full-screen">
         <div class="not-found-page">
-            <div class="error-number">4<div class="missing-zero"></div><div class="missing-zero"></div>1</div>
-            <div class="not-found-error-message">페이지를 찾을 수 없습니다</div>
+            <div class="error-number">4<div class="missing-zero"></div><div class="missing-zero"></div>3</div>
+            <div class="not-found-error-message">접근 권한이 없습니다.</div>
             <button type="button" class="home-button home-button-min">심봉사 홈으로 돌아가기</button>
         </div>
     </div>
