--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -11,16 +11,16 @@
 <body>
     <div class="full-screen">
         <div class="not-found-page">
-            <div class="error-number">4<div class="missing-zero"></div>4</div>
-            <div class="not-found-error-message">페이지를 찾을 수 없습니다</div>
-            <button type="button" class="home-button home-button-min">심봉사 홈으로 돌아가기</button>
+            <div class="error-number">4<div class="missing-zero"></div>1</div>
+            <div class="not-found-error-message">로그인을 해주세요</div>
+            <button type="button" class="home-button home-button-min">로그인 하러 가기</button>
         </div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script type="text/javascript">
     $('.home-button').click(function(){
-        window.location.href = '/main/main';
+        window.location.href = '/member/login-select';
     });
 </script>
 </html>
