qa작업 수정 완료

--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -515,6 +515,7 @@
         $('.modal-close').on('click', function () {
             $('.volunteer-modal').fadeOut(500);
             $('.modal-stage').empty();
+            goPage = 0;
         });
 
     })
