--- a/src/main/resources/templates/support/support-list.html
+++ b/src/main/resources/templates/support/support-list.html
@@ -44,15 +44,15 @@
                         <h4 class="service-header">
                             진행 중인 봉사 정보
                         </h4>
-                            <form name="goForm" action="/support/support-list" style="height: 34px;">
-                                <input name="keyword" type="hidden" value="" id="inputOp">
-                                <select class="select-region" id="selectOp">
-                                    <option value="">전체보기</option>
-                                    <option value="후원 많은순">후원 많은순</option>
-                                    <option value="후원 적은순">후원 적은순</option>
-                                    <option value="최신순">최신순</option>
-                                </select>
-                            </form>
+<!--                            <form name="goForm" action="/support/support-list" style="height: 34px;">-->
+<!--                                <input name="keyword" type="hidden" value="" id="inputOp">-->
+<!--                                <select class="select-region" id="selectOp">-->
+<!--                                    <option value="">전체보기</option>-->
+<!--                                    <option value="후원 많은순">후원 많은순</option>-->
+<!--                                    <option value="후원 적은순">후원 적은순</option>-->
+<!--                                    <option value="최신순">최신순</option>-->
+<!--                                </select>-->
+<!--                            </form>-->
                             <!-- <button type="button" class="button">지원</button> -->
                         </div>
                     </div>
