마이페이지 내 공양미 /메인 모달

--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -338,6 +338,19 @@
 
         </div>
         <div class="common-layer-tab"></div>
+
+        <div class="modal-wrap">
+            <div class="modal-container">
+                <div class="modal">
+                    <div class="modal-content">본 사이트는 학습용 사이트므로 회원가입 및 서비스 이용을 금지합니다.<br>
+                        위 내용을 무시하고 서비스 이용 중 손해 발생 시 저희 심봉사측은 책임 지지 않습니다.</div>
+                    <div class="modal-ok-div">
+                        <button type="button" class="modal-ok">확인</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
