--- a/src/main/resources/templates/volunteer-work/work.html
+++ b/src/main/resources/templates/volunteer-work/work.html
@@ -38,7 +38,7 @@
                         <span style="color: rgb(255, 87, 87);">46,860</span>
                         개의 후원 목록이 있습니다.
                         <select class="wrap_span">
-                            <option value="">전체보기</option>
+                            <option value="전체보기">전체보기</option>
                             <option value="서울특별시">서울특별시</option>
                             <option value="경기도">경기도</option>
                             <option value="충청북도">충청북도</option>
