--- a/src/main/resources/templates/community/free-board.html
+++ b/src/main/resources/templates/community/free-board.html
@@ -106,6 +106,12 @@
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 <script th:inline="javascript">
     let freeBoardList = [[${freeBoardList}]];
+
+    let member = [[${session.member}]];
+    let memberId;
+    if (member) {
+        memberId = member.id;
+    }
 </script>
 <script src="/js/community/free-board.js"></script>
 <script src="/js/main/header.js"></script>
