로그인/회원가입 수정
마이페이지 게시물 목록 조회

--- a/src/main/resources/templates/join-login/login-select.html
+++ b/src/main/resources/templates/join-login/login-select.html
@@ -12,7 +12,7 @@
     <div class="wrap">
         <div class="login-header">
             <div class="login-header-text">
-                <a href="" class="header-logo">
+                <a href="/main/" class="header-logo">
                     <div class="header-text">
                         <img src="/image/logo-test.png" style="width: 100%;">
                     </div>
