--- a/src/main/resources/templates/mypage/my-freeboard.html
+++ b/src/main/resources/templates/mypage/my-freeboard.html
@@ -98,9 +98,9 @@
             <div class="my-review-wrap">
                 <div class="my-board-header">
                     <div class="my-board-header-container">
-                        <span class="my-board-header-title">자유</span>
+                        <span class="my-board-header-title-select">자유</span>
                         <a th:href="@{/mypage/my-review}">
-                        <span class="my-board-header-title-select">활동후기</span>
+                        <span class="my-board-header-title">활동후기</span>
                         </a>
                     </div>
                 </div>
@@ -461,6 +461,6 @@
 <script th:inline="javascript">
     let myFreeBoards = [[${myFreedBoards}]];
 </script>
-<script src="/js/mypage/my-review.js"></script>
+<script src="/js/mypage/my-freeboard.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
 </html>
