--- a/src/main/resources/templates/join-login/change-password.html
+++ b/src/main/resources/templates/join-login/change-password.html
@@ -12,7 +12,7 @@
     <div class="all-wrap">
         <div class="password-header">
             <div class="password-header-text">
-                <a href="" class="header-logo">
+                <a href="/main/" class="header-logo">
                     <div class="header-text">
                         <img src="/image/logo-test.png" style="width: 100%;">
                     </div>
