개인정보 푸터 링크 연결까지 완료

--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -58,7 +58,7 @@
                             <a href="#" class="link-site-map" target="_blank">
                                 <span class="site-map-text">이용약관 소개</span>
                             </a>
-                            <a href="#" class="link-site-map" target="_blank" style="font-weight:700">
+                            <a href="/service/privacy" class="link-site-map" target="_blank" style="font-weight:700">
                                 <span class="site-map-text">개인정보 처리방침</span>
                             </a>
                             <a href="#" class="link-site-map" target="_blank">
