--- a/src/main/resources/templates/service-info/service-conditions.html
+++ b/src/main/resources/templates/service-info/service-conditions.html
@@ -54,7 +54,7 @@
                                 <div class="cont_term">
                                     <div class="item_term">
                                         <p>더 자세한 내용에 대해서는
-                                            <a href="https://help.tumblbug.com/hc/ko/articles/360051944893">개인정보처리방침</a>
+                                            <a href="/service/privacy-conditions">개인정보처리방침</a>
                                             을 참고하시길 바랍니다.
                                         </p>
                                     </div>
