--- a/src/main/resources/templates/service-info/service-privacy-conditions.html
+++ b/src/main/resources/templates/service-info/service-privacy-conditions.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/service-info/service-conditions.css">
+    <link rel="stylesheet" href="/css/service-info/service-privacy-conditions.css">
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="shortcut icon" href="/image/pavicon.png">
@@ -41,7 +41,8 @@
 
                         </h1>
                         <div class="article-content">
-                            <div class="article-body"><p>시행일 : 2023. 3. 2. (<a href="https://help.tumblbug.com/hc/ko/articles/15337239389337" target="_blank" rel="noopener noreferrer">개정 전 개인정보처리방침 바로가기</a>)</p>
+                            <div class="article-body">
+                                <p>시행일 : 2023. 3. 2 </p>
 
                                 <p>&nbsp;</p>
 
@@ -278,7 +279,7 @@
                                                         <th class="wysiwyg-text-align-center" style="width: 108.021px; height: 42px;">
                                                             <span class="wysiwyg-font-size-medium wysiwyg-color-black">이용 목적</span>
                                                         </th>
-                                                        <th class="wysiwyg-text-align-center" style="width: 43.5764px; height: 42px;">
+                                                        <th class="wysiwyg-text-align-center" style="width: 80.5764px; height: 42px;">
                                                             <span class="wysiwyg-font-size-medium wysiwyg-color-black">이전 국가</span>
                                                         </th>
                                                         <th class="wysiwyg-text-align-center" style="width: 132.465px; height: 42px;">
@@ -516,9 +517,9 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>김동환</td>
-                                        <td>02-6080-0760</td>
-                                        <td><a href="mailto:support@tumblbug.com">support@tumblbug.com</a></td>
+                                        <td>황자현</td>
+                                        <td>010-5555-5555</td>
+                                        <td><a href="mailto:support@tumblbug.com">support@simbongsa.com</a></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -564,9 +565,14 @@
 
         </main>
 
+<footer class="footer">
+    <div class="footer-inner">
+        <p>심봉사(주) | 대표 황자현 105-87-52823 | 서울특별시 강남구 테헤란로 146, 4층(역삼동) | 통신판매업 2022-서울서초-0352 | 대표전화 02-6080-0760</p>
+        <div class="footer-language-selector"></div>
+    </div>
+</footer>
 
 </body>
-<script>
-
-</script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="/js/main/header.js"></script>
 </html>
