--- a/src/main/resources/static/css/service-info/service-privacy-conditions.css
+++ b/src/main/resources/static/css/service-info/service-privacy-conditions.css
@@ -1,4 +1,3 @@
-
 @media (min-width: 1024px) {
     body > main {
         min-height: 65vh;
@@ -23,6 +22,13 @@
         flex: 1 0 63%;
         padding-left: 30px;
     }
+
+}
+
+@media (min-width: 768px) {
+    .article-title {
+        flex-basis: 100%;
+    }
 }
 
 @media (min-width: 1160px) {
@@ -41,44 +47,33 @@ body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     word-break: keep-all;
+    margin: 0;
 }
-
 
 h1 {
     font-weight: 400;
+    font-size: 36px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+    margin: 0.67em 0;
+}
+
+h3 {
+    font-size: 18px;
+    font-weight: 600;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+    margin-top: 0;
+
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 table {
     border-collapse: collapse;
     border-spacing: 0;
-}
-
-td {
-    padding: 6px 4px 6px 0;
-}
-
-strong {
-    font-weight: bold;
-}
-
-a {
-    color: rgb(39, 163, 255);
-    text-decoration: none;
-}
-
-.footer {
-    border-top: 1px solid #ddd;
-    margin-top: 60px;
-    padding: 30px 0;
-}
-.footer-inner {
-    font-size: 13px;
-    color: #757575;
-    max-width: 1160px;
-    margin: 0 auto;
-    padding: 0 5%;
-    display: flex;
-    justify-content: space-between;
 }
 
 .container-divider {
@@ -118,8 +113,21 @@ a {
     margin-top: 0;
 }
 
-.static.article .article-body {
-    line-height: 1.8;
+.article-body ol {
+    padding-left: 20px;
+    list-style-position: outside;
+    margin: 20px 0 20px 20px;
+}
+
+.article-body li {
+    padding: 3px 0;
+}
+
+.article-body ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    list-style-position: outside;
+    margin: 20px 0 20px 20px;
 }
 
 .static.article .article-body table {
@@ -129,6 +137,42 @@ a {
     margin: 20px 0;
 }
 
+.static.article .article-body table th {
+    vertical-align: top;
+    padding: 6px 4px 6px 0;
+    text-align: left;
+}
+
+
+.article-body table td {
+    vertical-align: top;
+    padding: 6px 4px 6px 0;
+}
+
 .static.article .article-body table td {
     border-top: 1px solid rgba(0,0,0,0.1);
+}
+
+.wysiwyg-color-black {
+    color: #000;
+}
+
+.article-body > p:last-child {
+    margin-bottom: 0;
+}
+
+.footer {
+    border-top: 1px solid #ddd;
+    margin-top: 60px;
+    padding: 30px 0;
+}
+
+.footer-inner {
+    font-size: 12px;
+    color: #757575;
+    max-width: 1160px;
+    margin: 0 auto;
+    padding: 0 5%;
+    display: flex;
+    justify-content: space-between;
 }
